# SIR_Relaxation

./: .gitignore  README.md  pyproject.toml
test1/: sir_method1.py  sir_method2.py  sir_method3.py  sir_method4.py
test2/: sir_method1.py  sir_method5.py  sir_method6.py
test3/: sir_vital_dynamics_euler.py  sir_vital_dynamics_method1_TOL.py  sir_vital_dynamics_method2_TOL.py  sir_vital_dynamics_rk4.py  sird_euler.py  sird_method1.py  sird_method2.py  sird_rk4.py  true_plot.txt
