[tool.poetry]
name = "sir-relaxation"
version = "0.1.0"
description = "SIR Relaxation Schemes"
authors = ["Quan Pham <minhquan14092002@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
